<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.register.EnterPhoneNumberFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerTextEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_text_enter_code"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/normalText"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerImage" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerTextWeSent"
        style="@style/smallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_small_margin"
        android:gravity="center"
        android:text="@string/registerTextWeSent"
        app:layout_constraintTop_toBottomOf="@+id/registerTextEnterCode" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/registerInputPhoneNumber"
        style="@style/editText"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:hint="@string/registerHintDefaultCode"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerTextWeSent" />
</androidx.constraintlayout.widget.ConstraintLayout>